fix spacing on top

--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -3,18 +3,20 @@
   height: 90vh;
   font-family: 'Lato', sans-serif;
   .title-container {
-    padding-top: 8%;
-    padding-left: 8%;
+    padding-top: 1vh;
+    padding-left: 5vw;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
     justify-content: space-between;
+    height: 15vh;
+    align-items: center;
     .picture {
-      height: 12.5vh;
-      width: 12.5vh;
+      height: 13vh;
+      width: 13vh;
       background-image: url('../Assets/profilePic.png');
       background-size: cover;
       border-radius: 10px;
-      margin-right: 6vw;
+      margin-right: 12vw;
     }
     .titles {
       justify-content: center;
@@ -32,20 +34,32 @@
       }
     }
   }
-  .body {
+  .body-container {
     display: flex;
     flex-direction: column;
+    width: 100vw;
     align-items: center;
-    padding-bottom: 2vh;
-    justify-content: space-evenly;
-    width: 90vw;
-    margin: 0 auto;
-    height: 55vh;
-    font-size: 19px;
-    .paragraph {
-      line-height: 1.3;
-      font-weight: 300;
-      letter-spacing: 1px;
+    justify-content: flex-start;
+    .body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 2vh;
+      width: 90vw;
+      height: 55vh;
+      font-size: 19px;
+      .paragraph {
+        line-height: 1.3;
+        font-weight: 300;
+        letter-spacing: 1px;
+        padding-top: 3.5vh;
+      }
+      .paragraph-1 {
+        line-height: 1.3;
+        font-weight: 300;
+        letter-spacing: 1px;
+        padding-top: 2vh;
+      }
     }
   }
   .footer {
