--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -9,14 +9,15 @@
   z-index: 10;
   background-color: white;
   width: 100%;
-
+  border-bottom: 1px solid black;
   .contact {
+    text-decoration: none;
     font-size: 16px;
     border: 2px solid $light-green;
     border-radius: 8px;
     padding: 2px 10px;
     color: $light-green;
-    margin-right: 3%;
+    margin-right: 4%;
     display: flex;
     align-items: center;
   }
