--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -1,5 +1,5 @@
 .home-container {
-  height: 80vh;
+  height: 90vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
